Fix z-index

--- a/app/assets/stylesheets/components/_tooltips.scss
+++ b/app/assets/stylesheets/components/_tooltips.scss
@@ -20,7 +20,7 @@
     top 0s,
     left 0s;
   backdrop-filter: blur(2px);
-  z-index: 999;
+  z-index: 99999999;
   opacity: 0;
 
   &.active {
